some missing files

--- a/Settings.html
+++ b/Settings.html
@@ -4,7 +4,7 @@
 		<title>Menu</title>
 		<meta charset="utf-8">
 		<meta name= viewport content= width=device-width initial-scale=1 />﻿
-		<link rel="stylesheet"<base href="./css/Settings.css">
+		<link rel="stylesheet"<base href="./css/settings.css">
 		<link rel="stylesheet"<base href="./css/hover-min.css">
 		<script type="text/javascript" src="js/settings.js" defer="true"></script>
 	</head>
